Let user delete tamagotchis
Co-authored-by: Caleb Coughenour <CalebCoughenour@protonmail.com>
Co-authored-by: Jeremy Martin <jeremyvs1945@gmail.com>

--- a/Tamagotchi.Solution/Tamagotchi/Views/Tamagotchi/Index.cshtml
+++ b/Tamagotchi.Solution/Tamagotchi/Views/Tamagotchi/Index.cshtml
@@ -13,12 +13,12 @@
 			{
 				@if (pet.Dead)
 				{
-					<li>@pet.Name is dead</li>
+					<li><a href="/tamagotchi/@pet.Id">@pet.Name</a> is dead</li>
 				}
 				else
 				{
 					<li>
-						<a href="/tamagotchi/@pet.Name">@pet.Name</a>
+						<a href="/tamagotchi/@pet.Id">@pet.Name</a>
 						<ul>
 							<li>Food: @pet.Food</li>
 							<li>Mood: @pet.Mood</li>
