--- a/Tamagotchi.Solution/Tamagotchi/Views/Tamagotchi/Show.cshtml
+++ b/Tamagotchi.Solution/Tamagotchi/Views/Tamagotchi/Show.cshtml
@@ -28,6 +28,10 @@
       </form>
     }
 
+    <form action="/tamagotchi/@Model.Id/delete" method="post">
+      <button type="submit" class="btn btn-danger">Delete this Tamagotchi</button>
+    </form>
+
     <a href="/tamagotchi"><button class="btn btn-primary">Back to List</button></a>
 	</body>
 </html>
